# rds-mysql-performance-skills

./: .gitignore  LICENSE  QUICKSTART.md  README.md  config.example.json  requirements.txt
mcp-server/: .gitignore  README.md  pyproject.toml
mcp-server/tests/: __init__.py  test_server.py
mcp-server/veerendranayak/rds_mysql_mcp_server/: __init__.py  server.py
mcp-server/veerendranayak/rds_mysql_mcp_server/prompts/: aurora_mysql_performance_review.md  rds_mysql_performance_review.md
scripts/: __init__.py  query_analyzer.py  rds_performance_diagnostic.py
skills/aurora-mysql/: SKILL.md
skills/aurora-mysql/references/: aurora-specifics.md  mysql-84-changes.md  query-patterns.md
skills/rds-mysql/: SKILL.md
skills/rds-mysql/references/: cloudwatch-metrics.md  query-optimization.md  rds-best-practices.md
